# focus

./: .gitignore  README.md  index.html  launch.ps1  launch.vbs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
src/: App.legacy.jsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/activity_engine/: mod.rs
src-tauri/src/commands/: account.rs  activity.rs  ai.rs  automation_rule.rs  calendar.rs  campaign.rs  chat.rs  company.rs  contact.rs  crm.rs  customer.rs  deadline.rs  deal.rs  export.rs  folder.rs  follow_up.rs  invoice.rs  kpi.rs  lead.rs  lead_stage.rs  mod.rs  note.rs  offer.rs  pipeline_stage.rs  smart_list.rs  time_entry.rs  todo.rs  workspace_ablage.rs
src-tauri/src/core/auth/: mod.rs
src-tauri/src/core/sync/: connectivity.rs  mod.rs  pull.rs  push.rs
src-tauri/src/db/: account.rs  activity.rs  automation_rule.rs  calendar.rs  campaign.rs  chat_message.rs  company.rs  contact.rs  crm.rs  customer.rs  deadline.rs  deal.rs  folder.rs  follow_up_queue.rs  invoice.rs  kpi.rs  lead.rs  lead_stage.rs  migrations.rs  mod.rs  note.rs  offer.rs  pipeline_stage.rs  pool.rs  schema.rs  smart_list.rs  time_entry.rs  todo.rs  workspace_ablage.rs
src-tauri/src/email/: auto_detect.rs  commands.rs  db.rs  folders.rs  imap.rs  keychain.rs  mod.rs  smtp.rs  types.rs
src-tauri/src/engine/: mod.rs  rules.rs
src-tauri/src/services/: mod.rs
(+438 files in other folders)
